# i3ipcpp

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
include/: auss.hpp  log.hpp
include/i3ipc++/: ipc-util.hpp  ipc.hpp
src/: ipc-util.cpp  ipc.cpp
test/: test_ipc.hpp
